force-app/main/default/objects/SPEN_CustomerUpdate__c/SPEN_CustomerUpdate__c.object-meta.xml
<CustomObject>
    <description>Various update activities to inform customers.</description>
    <label>Outbound Dialler Task</label>
    <nameField>
        <displayFormat>OD-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Dialler Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>