force-app/main/default/objects/SPEN_CustomerUpdate__c/fields/SPEN_CallResolution__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CallResolution__c</fullName>
    <label>Call Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outbound-not reachable</fullName>
            </value>
            <value>
                <fullName>Successful call</fullName>
            </value>
            <value>
                <fullName>Voicemail left</fullName>
            </value>
            <value>
                <fullName>Case created</fullName>
            </value>
            <value>
                <fullName>Case updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>