force-app/main/default/objects/SPEN_CustomerUpdate__c/fields/SPEN_Campaign__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Campaign__c</fullName>
    <label>Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1</fullName>
            </value>
            <value>
                <fullName>Stage 2</fullName>
            </value>
            <value>
                <fullName>Stage 3</fullName>
            </value>
            <value>
                <fullName>Stage 4</fullName>
            </value>
            <value>
                <fullName>Stage 2 Reply</fullName>
            </value>
            <value>
                <fullName>Stage 1 Reply</fullName>
            </value>
            <value>
                <fullName>Stage 3 Reply</fullName>
            </value>
            <value>
                <fullName>Stage 4 Reply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>