force-app/main/default/objects/SPEN_CustomerUpdate__c/fields/SPEN_ContactId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outbound Dialler Tasks</relationshipLabel>
    <relationshipName>Outbound_Dialler_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>