force-app/main/default/objects/SPEN_CustomerUpdate__c/fields/SPEN_DropDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DropDateTime__c</fullName>
    <description>It will be used to drop the Dialler records if not picked up by agents</description>
    <label>DropDateTime</label>
    <type>DateTime</type>
</CustomField>