force-app/main/default/objects/SPEN_CustomerUpdate__c/fields/SPEN_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>