force-app/main/default/objects/SPEN_CustomerUpdate__c/fields/SPEN_Impacted_Premise__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Impacted_Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Impacted Premise</description>
    <label>Impacted Premise</label>
    <referenceTo>SPEN_ImpactedPremise__c</referenceTo>
    <relationshipLabel>Outbound Dialler Tasks</relationshipLabel>
    <relationshipName>Outbound_Dialler_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>