force-app/main/default/objects/SPEN_CustomerUpdate__c/fields/SPEN_IncidentId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipName>Customer_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>