force-app/main/default/objects/SPEN_CustomerUpdate__c/fields/SPEN_Info__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Info__c</fullName>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>