force-app/main/default/objects/SPEN_CustomerUpdate__c/fields/SPEN_Resolution_comments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Resolution_comments__c</fullName>
    <label>Resolution comments</label>
    <type>TextArea</type>
</CustomField>