force-app/main/default/objects/SPEN_CustomerUpdate__c/fields/SPEN_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
                <isActive>false</isActive>
                <label>Dropped</label>
            </value>
            <value>
                <fullName>RetryCustomer</fullName>
                <isActive>false</isActive>
                <label>RetryCustomer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>