force-app/main/default/objects/SPEN_CustomerUpdate__c/validationRules/SPEN_Resolution_comments_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_Resolution_comments_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(SPEN_Status__c , &apos;Completed&apos;) ,ISBLANK(SPEN_Resolution_comments__c))</errorConditionFormula>
    <errorDisplayField>SPEN_Resolution_comments__c</errorDisplayField>
    <errorMessage>Resolution Comments are Mandatory while completing Task</errorMessage>
</ValidationRule>