force-app/main/default/objects/SPEN_CustomerUpdate__c/listViews/Active_Assigned_Tasks.listView-meta.xml
<ListView>
    <fullName>Active_Assigned_Tasks</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Priority__c</columns>
    <columns>SPEN_Type__c</columns>
    <columns>SPEN_Campaign__c</columns>
    <columns>SPEN_ContactId__c</columns>
    <columns>SPEN_Info__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>Dropped</value>
    </filters>
    <filters>
        <field>SPEN_Resolution_comments__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active Assigned Tasks</label>
</ListView>