force-app/main/default/objects/SPEN_CustomerUpdate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Campaign__c</columns>
    <columns>SPEN_Info__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>SPEN_Resolution_comments__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>