force-app/main/default/objects/SPEN_CustomerUpdate__c/listViews/Outbound_Dialer_SPEN_CustomerUpdate.listView-meta.xml
<ListView>
    <fullName>Outbound_Dialer_SPEN_CustomerUpdate</fullName>
    <columns>NAME</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_Info__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Outbound Dialer</label>
    <queue>Outbound_Dialer</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>