force-app/main/default/objects/SPEN_CustomerUpdate__c/listViews/Unassigned_Tasks.listView-meta.xml
<ListView>
    <fullName>Unassigned_Tasks</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Type__c</columns>
    <columns>SPEN_Campaign__c</columns>
    <columns>SPEN_ContactId__c</columns>
    <columns>SPEN_Info__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Unassigned Tasks</label>
</ListView>